# chroma_datasets

./: .gitignore  DEVELOP.md  README.md  pyproject.toml  requirements.txt  test.ipynb
.chroma/index/: id_to_uuid_67fbb097-2cd8-47fd-88d8-1e73045b3d26.pkl  id_to_uuid_72651421-1dac-4dd2-83a1-d5754e43606e.pkl  index_metadata_67fbb097-2cd8-47fd-88d8-1e73045b3d26.pkl  index_metadata_72651421-1dac-4dd2-83a1-d5754e43606e.pkl  uuid_to_id_67fbb097-2cd8-47fd-88d8-1e73045b3d26.pkl  uuid_to_id_72651421-1dac-4dd2-83a1-d5754e43606e.pkl
chroma_datasets/: __init__.py  dataset.py  types.py  utils.py
chroma_datasets.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chroma_datasets/datasets/: glue.py  huberman_podcast.py  paul_graham_essay.py  sciq.py  state_of_the_union.py
examples/: example_export.ipynb  example_import.ipynb  example_misc_hf_import.ipynb  super_simple.ipynb
examples/data/: paul_graham_essay.txt
